# ICSDClient

./: README.md  pyproject.toml
src/icsdclient/: __init__.py  client.py
