[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ICSDClient"
version = "0.1"
description = "A pip installable version of the ICSD API Client."
maintainers = [
    {name = "Anthony Onwuli", email = "aoo216@ic.ac.uk"},
]
license = {text = "GPL"}
readme = "README.md"

classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "beautifulsoup4>=4.11.1",
    "certifi>=2023.7.22",
    "charset-normalizer>=2.1.1",
    "idna>=3.4",
    "numpy>=1.23.4",
    "pip>=22.2.2",
    "requests>=2.28.1",
    "setuptools>=65.5.0",
    "soupsieve>=2.3.2.post1",
    "urllib3>=1.26.12",
    "wheel>=0.37.1"
]

[project.optional-dependencies]
testing = []

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]